src/test/ui/consts/issue-73976-polymorphic.stderr
error: constant pattern depends on a generic parameter
  --> $DIR/issue-73976-polymorphic.rs:20:37
   |
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/issue-73976-polymorphic.rs:32:42
   |
LL |     matches!(GetTypeNameLen::<T>::VALUE, GetTypeNameLen::<T>::VALUE)
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/issue-73976-polymorphic.rs:20:37
   |
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/issue-73976-polymorphic.rs:32:42
   |
LL |     matches!(GetTypeNameLen::<T>::VALUE, GetTypeNameLen::<T>::VALUE)
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

